[package]
name = "ticktick-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }

serde_qs = "0.12.0"
serde_json = "1.0"
