[package]
name = "tk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }

serde_qs = "0.13.0"
serde_json = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
directories = "5.0.1"
